<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <include layout="@layout/navigation_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include2" />

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/include2"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:id="@+id/scrollView2">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" android:orientation="vertical">

           <android.support.v7.widget.CardView android:layout_width="match_parent"
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_height="wrap_content"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               app:cardBackgroundColor="#fff176"
               app:cardCornerRadius="5dp"
               app:cardElevation="5dp"
               app:contentPadding="3dp"
               android:layout_below="@+id/include2"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">


                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="200dp"
                       android:src="@mipmap/cc1"
                       android:layout_marginBottom="50dp"
                       android:layout_marginTop="10dp"
                       android:layout_marginLeft="5dp"/>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="vertical"
                       android:layout_marginLeft="20dp">


                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">

                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/owner"
                             android:text="@string/owner"
                             android:textStyle="bold"
                             android:textAllCaps="true"
                             android:textColor="#000000"
                             />

                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="italic"
                             android:text="@string/ownern"
                             android:paddingLeft="10dp"/>
                     </LinearLayout>

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:orientation="horizontal"
                           android:layout_marginTop="10dp">

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:id="@+id/address"
                               android:text="@string/address"
                               android:textStyle="bold"
                               android:textAllCaps="true"
                               android:textColor="#000000"
                               />

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textStyle="italic"
                               android:text="@string/addressD"
                               android:paddingLeft="10dp"/>
                       </LinearLayout>

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:orientation="horizontal"
                           android:layout_marginTop="10dp">

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:id="@+id/phone"
                               android:text="@string/phone"
                               android:textStyle="bold"
                               android:textAllCaps="true"
                               android:textColor="#000000"
                               />

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"

                               android:text="@string/phoneno"
                               android:paddingLeft="10dp"
                               android:textStyle="italic"

                               android:layout_marginBottom="20dp"/>
                       </LinearLayout>





                   </LinearLayout>


               </LinearLayout>

           </android.support.v7.widget.CardView>

       </LinearLayout>
   </ScrollView>


</RelativeLayout>
